--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@
 
 .dashboard_bottom_right {
     border: 2px dashed lime;
+    height: calc(100vh - 70px);
+    overflow: auto;
 }
 
 .dashboard_bottom_right_top {
